--- a/index.html
+++ b/index.html
@@ -2,108 +2,24 @@
 <html lang="en">
 
     <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Register</title>
 
-        <style>
-            body {
-                background-color: black;
-                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-                width: 1200px;
-                margin: auto;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                min-height: 100vh;
-            }
+        
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/reset.css">
 
-            input {
-                width: 100%;
-                padding: 10px;
-                border: 1px solid #ddd;
-                border-radius: 4px;
-                margin-bottom: 10px;
-                font-size: 16px;
-                display: block;
-            }
-
-            h2 {
-                text-align: center;
-                justify-content: center;
-                font-size: 20px;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-            }
-
-            a {
-                margin: 10px;
-            }
-
-            button {
-                width: 100%;
-                padding: 0.8rem;
-                border: 1px solid #ddd;
-                border-radius: 4px;
-                background: white;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                gap: 0.5rem;
-                cursor: pointer;
-                font-size: 1rem;
-            }
-
-            .register {
-                background-color: rgb(55, 207, 55);
-            }
-
-            .container {
-                background-color: white;
-                padding: 2rem;
-                border-radius: 8px;
-                width: 400px;
-                position: relative;
-                margin: auto;
-                height: 600px;
-            }
-
-            .header {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-            }
-
-            .form {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-            }
-
-            .devider {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-            }
-
-            .google-facebook {
-                display: flex;
-                flex-direction: column;
-                gap: 0.8rem;
-
-
-            }
-        </style>
+        <link rel="stylesheet" href="css/styles.css">
     </head>
 
     <body>
         <div class="container">
             <div class="header">
                 <h2>
-                    <a href="#" style="color: black;">Login</a>
-                    <span style="margin: 10px;"> | </span>
-                    <a href="#" style="color: rgb(4, 85, 4);"> Register </a>
+                    <a class="login" href="#login">Login</a>
+                    <span> | </span>
+                    <a class="register" href="#register"> Register </a>
                 </h2>
             </div>
             <div class="devider">
@@ -112,12 +28,12 @@
 
             <div class="form">
                 <form>
-                    <input type="text" placeholder="Username" required />
-                    <input type="email" placeholder="Enter your email" required />
-                    <input type="password" placeholder="Password" required />
-                    <input type="password" placeholder="Confirm Password" required />
+                    <input type="text" placeholder="Username" required>
+                    <input type="email" placeholder="Enter your email" required>
+                    <input type="password" placeholder="Password" required>
+                    <input type="password" placeholder="Confirm Password" required>
 
-                    <input class="register" type="submit" value="Register" />
+                    <input class="register-btn" type="submit" value="Register">
                 </form>
             </div>
 
